[package]
name = "reach"
version = "0.1.0"
authors = ["Jonathan Lange <jml@mumak.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
num_cpus = "1.0"
tokio = { version = "1", features = [ "full" ] }
