[package]
name = "reach"
version = "0.1.0"
authors = ["Jonathan Lange <jml@mumak.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.52"
clap = "3.0.0-beta.2"
futures = "0.3"
indicatif = "0.16.2"
num_cpus = "1.0"
tokio = { version = "1", features = [ "full" ] }
tokio-stream = { version = "0.1", features = [ "fs" ] }

[dev-dependencies]
tempfile = "3"
